external-crates/move/crates/move-compiler/tests/move_2024/naming/named_blocks_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03014]: invalid use of label
  ┌─ tests/move_2024/naming/named_blocks_invalid.move:4:31
  │
4 │             if (cond) { break 'name 10 };
  │                               ^^^^^ Invalid usage of 'break' with a named block label
  │
  = Named block labels may only be used with 'return', not 'break' or 'continue'.

error[E03014]: invalid use of label
  ┌─ tests/move_2024/naming/named_blocks_invalid.move:5:34
  │
5 │             if (cond) { continue 'name };
  │                                  ^^^^^ Invalid usage of 'continue' with a named block label
  │
  = Named block labels may only be used with 'return', not 'break' or 'continue'.

error[E03014]: invalid use of label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:12:32
   │
12 │             if (cond) { return 'name 10 };
   │                                ^^^^^ Invalid usage of 'return' with a loop block label
   │
   = Loop labels may only be used with 'break' and 'continue', not 'return'

error[E03014]: invalid use of label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:19:36
   │
19 │                 if (cond) { return 'outer 10 };
   │                                    ^^^^^^ Invalid usage of 'return' with a loop block label
   │
   = Loop labels may only be used with 'break' and 'continue', not 'return'

error[E03014]: invalid use of label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:20:36
   │
20 │                 if (cond) { return 'inner 20 };
   │                                    ^^^^^^ Invalid usage of 'return' with a loop block label
   │
   = Loop labels may only be used with 'break' and 'continue', not 'return'

error[E03014]: invalid use of label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:28:36
   │
28 │                 if (cond) { return 'outer };
   │                                    ^^^^^^ Invalid usage of 'return' with a loop block label
   │
   = Loop labels may only be used with 'break' and 'continue', not 'return'

error[E03014]: invalid use of label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:29:36
   │
29 │                 if (cond) { return 'inner };
   │                                    ^^^^^^ Invalid usage of 'return' with a loop block label
   │
   = Loop labels may only be used with 'break' and 'continue', not 'return'

error[E03014]: invalid use of label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:37:36
   │
37 │                 if (cond) { return 'outer };
   │                                    ^^^^^^ Invalid usage of 'return' with a loop block label
   │
   = Loop labels may only be used with 'break' and 'continue', not 'return'

error[E03014]: invalid use of label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:38:35
   │
38 │                 if (cond) { break 'inner 10 };
   │                                   ^^^^^^ Invalid usage of 'break' with a named block label
   │
   = Named block labels may only be used with 'return', not 'break' or 'continue'.

error[E03014]: invalid use of label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:47:24
   │
47 │                 return 'l
   │                        ^^ Invalid usage of 'return' with a loop block label
   │
   = Loop labels may only be used with 'break' and 'continue', not 'return'

error[E03015]: unbound label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:54:32
   │
54 │             if (cond) { return 'name2 10 };
   │                                ^^^^^^ Invalid return. Unbound label 'name2

error[E03015]: unbound label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:61:34
   │
61 │             if (cond) { continue 'name2 };
   │                                  ^^^^^^ Invalid continue. Unbound label 'name2

error[E03015]: unbound label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:62:31
   │
62 │             if (cond) { break 'name2 10 };
   │                               ^^^^^^ Invalid break. Unbound label 'name2

error[E03015]: unbound label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:69:35
   │
69 │                 if (cond) { break 'outer 10 };
   │                                   ^^^^^^ Invalid break. Unbound label 'outer

error[E03015]: unbound label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:70:35
   │
70 │                 if (cond) { break 'inner 20 };
   │                                   ^^^^^^ Invalid break. Unbound label 'inner

error[E03015]: unbound label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:78:38
   │
78 │                 if (cond) { continue 'outer2 };
   │                                      ^^^^^^^ Invalid continue. Unbound label 'outer2

error[E03015]: unbound label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:79:35
   │
79 │                 if (cond) { break 'inner2 };
   │                                   ^^^^^^^ Invalid break. Unbound label 'inner2

error[E03015]: unbound label
   ┌─ tests/move_2024/naming/named_blocks_invalid.move:87:23
   │
87 │                 break 'l2
   │                       ^^^ Invalid break. Unbound label 'l2
